# file_sender

./: README.md
references/socket_sample/: client  client_sample.cpp  server  server_sample.cpp
references/socket_sample2/: client.c  server.c
send_file/: CMakeLists.txt
send_file/Receiver/: CMakeLists.txt
send_file/Receiver/include/: socket.hpp
send_file/Receiver/src/: main.cpp  server_socket.cpp
send_file/Sender/: CMakeLists.txt
send_file/Sender/include/: client_socket.hpp
send_file/Sender/src/: client_socket.cpp  main.cpp
send_file_multifile/: CMakeLists.txt
send_file_multithread/: CMakeLists.txt
send_file_multithread/Receiver/include/: server_socket.hpp
send_file_multithread/Receiver/src/: server_socket.cpp
send_file_multithread/src/: main.cpp
send_multi/Receiver/: CMakeLists.txt
send_multi/Receiver/include/: server_socket.hpp
send_multi/Receiver/src/: main.cpp  server_socket.cpp
send_multi/Sender/include/: client_socket.hpp  socket.hpp
send_multi/Sender/src/: client_socket.cpp  main.cpp
send_multi_file_multithreading/Sender/: CMakeLists.txt
send_string/: CMakeLists.txt
send_string/Receiver/include/: server_socket.hpp
send_string/Receiver/src/: main.cpp  server_socket.cpp
send_string/Sender/include/: client_socket.hpp
send_string/Sender/src/: client_socket.cpp  main.cpp
send_string/src/: main.cpp
socket_sample/: client_sample.cpp  server_sample.cpp
